<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        app:showAsAction="ifRoom"
        android:id="@+id/menu_paises"
        android:visible="false"
        android:title="@string/countries"
        />

    <item
        app:showAsAction="never"
        android:id="@+id/africa"
        android:title="@string/africa_op" />
    <item
        app:showAsAction="never"
        android:id="@+id/americas"
        android:title="@string/america_op" />
    <item
        app:showAsAction="never"
        android:id="@+id/asia"
        android:title="@string/asia_op" />
    <item
        app:showAsAction="never"
        android:id="@+id/europe"
        android:title="@string/europe_op" />
    <item
        app:showAsAction="never"
        android:id="@+id/oceania"
        android:title="@string/oceania_op" />

    <item
        app:showAsAction="never"
        android:id="@+id/menu_favorites"
        android:title="@string/menu_paises_favoritos" />
</menu>